test/e2e/features/lambda/testdata/lambda-backend.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lambda-route
  namespace: lambda-test
spec:
  parentRefs:
    - name: lambda-gateway
  hostnames:
    - "www.example.com"
  rules:
    - matches:
      - path:
          type: Exact
          value: /lambda
      backendRefs:
        - name: lambda-backend
          kind: Backend
          group: gateway.kgateway.dev
    - matches:
      - path:
          type: Exact
          value: /lambda/no-payload-transform
      backendRefs:
        - name: lambda-without-payload-transform
          kind: Backend
          group: gateway.kgateway.dev          
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: Backend
metadata:
  name: lambda-backend
  namespace: lambda-test
spec:
  type: AWS
  aws:
    auth:
      type: Secret
      secretRef:
        name: aws-creds
    lambda:
      accountId: "000000000000"
      functionName: hello-function
      endpointURL: "http://172.18.0.2:31566"
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: Backend
metadata:
  name: lambda-without-payload-transform
  namespace: lambda-test
spec:
  type: AWS
  aws:
    auth:
      type: Secret
      secretRef:
        name: aws-creds
    lambda:
      accountId: "000000000000"
      functionName: hello-function
      endpointURL: "http://172.18.0.2:31566"
      payloadTransformMode: None
